force-app/main/default/objects/Security_Health_Check_Org__c.object
<CustomObject>
    <description>Used to enter information about orgs that will be reporting up to the central org</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether this org should still appear in the UI</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Org_Id__c</fullName>
        <formula>IF( LEN(Organization_Id__c)=15, CASESAFEID(Organization_Id__c), Organization_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Org ID automatically converted to 18 characters [if required]</inlineHelpText>
        <label>Actual Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Security_Health_Check_Org_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the current environment</description>
        <label>Current Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Classification__c</fullName>
        <description>The level of data stored in the org.</description>
        <label>Data Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Security_Health_Check_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Contact_Email__c</fullName>
        <inlineHelpText>If the Point of Contact is not a user of this org, enter their email address here</inlineHelpText>
        <label>External Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Sync__c</fullName>
        <label>Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Score__c</fullName>
        <label>Latest Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <inlineHelpText>The Organization Id of the org (taken from the Company Information page)</inlineHelpText>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Health_Check_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Security Health Check Org</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Last_Sync__c</columns>
        <columns>Latest_Score__c</columns>
        <columns>Point_of_Contact__c</columns>
        <columns>Organization_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Security Health Check Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Health Check Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_that_ID_exist_before_activating</fullName>
        <active>true</active>
        <description>Need to ensure that theOrg Id is at least 15 chars before allowing record to be active</description>
        <errorConditionFormula>Active__c = TRUE &amp;&amp;  LEN( Organization_Id__c )&lt;15</errorConditionFormula>
        <errorMessage>Org Record cannot be made active without a valid Organisation Id</errorMessage>
    </validationRules>
</CustomObject>